move light calculations to non render thread